--- a/cens-452/index.html
+++ b/cens-452/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React</title>
   </head>
-  <body class=" max-md:px-0 lg:px-20 ">
+  <body class=" max-md:px-0 ">
     <div id="root"></div>
     <script type="module" src="/src/Layout.jsx"></script>
   </body>
